...
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnSaveHouseholdMember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgViewAvatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:maxHeight="@android:dimen/thumbnail_height"
                android:maxWidth="@android:dimen/thumbnail_width"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@+id/txtNameLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_camera" />

...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/txtAgeLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgViewAvatar">
                <!--
                android:visibility="gone"
                -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtHouseholdId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/householdid"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtParticipantIdLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
...

                <!--
                android:visibility="gone"
                -->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtParticipantId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/participantid"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

...
                app:layout_constraintBottom_toTopOf="@+id/txtAgeLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgViewAvatar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
...
                        android:layout_marginEnd="8dp"/>
                </LinearLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/chkIsBreastfed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/radioBtnFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/female"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/radioBtnMale"
                        app:layout_constraintTop_toTopOf="@+id/radioBtnMale" />

                    <RadioButton
                        android:id="@+id/radioBtnMale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="Life Stage: "/>
                <Spinner
                    android:id="@+id/spinnerLifeStage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/life_stages"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
...
