...
    <string name="request_permission_audio">This application requires permission to use the microphone in order to record the audio description.</string>
    <string name="breastfed">Breastfed</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="error_name">Please enter the Name</string>
    <string name="error_age">Please enter a valid Age</string>
    <string name="no_image">No image taken. Please take a photo.</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="pin_hint" translatable="false">PIN</string>
    <string name="pin_value" translatable="false">0000</string>
    <string name="setup_household_first_use_prompt">Click the plus button to add a new household member.</string>
    <string name="setup_household_first_use_prompt_title">Add Household member</string>
...
    <string name="how_many_childer">Number of children:</string>
    <string name="setup_household">Setup Household</string>
    <string name="exportdata">Export Data</string>
    <string name="add_text_description_dialog_title" translatable="false">Add Text Description</string>
    <string name="toast_food_item_description" translatable="false">Food Item Description:</string>
    <string name="empty_text" translatable="false">Empty input not allowed. Please enter a description.</string>
    <string name="error_participant_id_already_exists">Participant ID already Exists</string>
    <string name="title_notification_reminder">Reminder!</string>
    <string name="notification_reminder_text">Remember to record your food intake today.</string>
    <string name="notification_reminder_child_text">Remember to record the food intake for yourself and your child today.</string>
    <string name="notification_reminder_channel_name">Reminder</string>
    <string name="notification_reminder_channel_description">Notification to remind users to record their dietary intake for that day.</string>
    <string name="title_alert_schedule">Alert Schedule</string>
...
